test/sema/const-array-pointer-implicit-wrap-to-non-const.cx
// RUN: %not %cx -print-llvm %s | %FileCheck %s

intSUOJA? o = null;

extern const int& f();

void main() {
    // TODO: Make this test work with explicitly typed local variable of type 'const intSUOJA', in addition to the cast result.
    var p = cast<const intSUOJA>(f());

    // CHECK: [[@LINE+1]]:7: error: cannot assign 'const intSUOJA' to 'intSUOJA?'
    o = p;
}
